// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render ExpenseSummary correctly 2`] = `
<div>
  <h1>
    Viewing 
    26
     
    expenses
     totalling 
    $61,231,232.31
  </h1>
</div>
`;
